--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,32 @@
-body {
+.nomargin {
   margin: 0;
+}
+
+h1 {
+  border-bottom: 1px solid grey;
+}
+
+.pad {
+  padding: 1rem;
+}
+
+.font {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.grid {
+  display: grid;
+}
+
+.grid.center {
+  justify-items: center;
+}
+
+@media print {
+  p,
+  ul,
+  ol {
+    page-break-inside: avoid;
+  }
 }
