--- a/src/styles/grid.sass
+++ b/src/styles/grid.sass
@@ -2,7 +2,19 @@
   display: grid
 
   &.center
-    justify-items: center
+    place-items: center
+
+    & > .top
+      align-self: start
+
+    & > .bottom
+      align-self: end
+
+    & > .left
+      justify-self: start
+
+    & > .right
+      justify-self: end
 
   &.main-with-sides
     grid-template-columns: 1fr auto 1fr
