--- a/src/styles/_image.sass
+++ b/src/styles/_image.sass
@@ -2,10 +2,11 @@
 @use 'sass:color'
 
 .image
-  width: 15rem
+  width: 12rem
 
   & > img
     width: 100%
-    border-radius: 10%
-    border: 2px solid colors.$highlight
-    box-shadow: 0 0 8px 0 color.change(colors.$highlight, $alpha: 0.6)
+    border-radius: 50%
+    // border-radius: 10%
+    // border: 2px solid colors.$highlight
+    // box-shadow: 0 0 8px 0 color.change(colors.$highlight, $alpha: 0.6)
