--- a/src/global.sass
+++ b/src/global.sass
@@ -3,16 +3,30 @@
 @use 'styles/grid'
 @use 'styles/overlay'
 @use 'styles/image'
+@use 'styles/cover'
+@use 'styles/colors'
+
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap')
+
+h1
+  border-bottom: 1px solid colors.$text
+  margin-block: 0
+  padding-block: 1rem
+
+h2
+  text-align: center
 
 hr
   border: none
-  border-bottom: 1px solid grey
+  border-bottom: 1px solid colors.$text
+  width: 60vw
+  margin-block: 4rem
 
 .nomargin
   margin: 0
 
 .font
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif
+  font-family: 'Ubuntu', sans-serif
 
 .width
   max-width: 50rem
