--- a/src/global.sass
+++ b/src/global.sass
@@ -1,11 +1,5 @@
-@use 'styles/web'
-@use 'styles/print'
 @use 'styles/grid'
-@use 'styles/overlay'
-@use 'styles/image'
-@use 'styles/cover'
-@use 'styles/colors'
-@use 'styles/themes'
+@use 'styles/theme'
 
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap')
 
@@ -17,24 +11,42 @@ body
   font-family: 'Ubuntu', sans-serif
 
 h1
-  border-bottom: 1px solid colors.$text
   margin-block: 0
   padding-block: 1rem
 
 h2
   text-align: center
 
+h4
+  margin-inline: 1rem
+
 p
   margin-inline: 2rem
 
 hr
   border: none
-  border-bottom: 1px solid colors.$text
   width: 60vw
   margin-block: 4rem
+
+  &:first-child, &:last-child
+    width: 80vw
 
 .width
   max-width: 50rem
 
 .pad
   padding: 1rem
+
+.cover
+  min-height: 100vh
+  box-sizing: border-box
+
+.image
+  width: 12rem
+
+  & > img
+    width: 100%
+    border-radius: 50%
+
+.end
+  height: 30vh
